--- a/src/ui/app.scss
+++ b/src/ui/app.scss
@@ -127,3 +127,11 @@
 }
 
 .textOverflow{width: 300px;overflow: auto;}
+
+.bg1{background-color: #fff;
+  padding: 1rem;}
+
+.color-blue{ color: #3f00ff; background: #ffd4d4;
+}
+
+.bg-green{ background-color: #07bc0c; }
